--- a/packages/client-react/package.json
+++ b/packages/client-react/package.json
@@ -27,8 +27,8 @@
     "README.md"
   ],
   "peerDependencies": {
-    "react": "0.14.x || 15.x.x || 16.x.x",
-    "react-dom": "0.14.x || 15.x.x || 16.x.x"
+    "react": "0.14.x || 15.x.x || 16.x.x || 17.x.x",
+    "react-dom": "0.14.x || 15.x.x || 16.x.x || 17.x.x"
   },
   "devDependencies": {
     "@opuscapita/npm-scripts": "2.0.0",
@@ -76,8 +76,8 @@
     "postcss-modules": "0.6.4",
     "progress-bar-webpack-plugin": "1.10.0",
     "raw-loader": "0.5.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-test-renderer": "16.2.0",
     "rimraf": "2.6.1",
     "sinon": "2.1.0",
